# RPiAutomation

./: .gitmodules
Pico/: CMakeLists.txt  test.cpp
